objects/Financial_Account_Link_SFDC2__c.object
<CustomObject>
    <description>Creates a junction between Account and Financial Account to create a many-to-many relationship, SFDC2</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(Account__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Financial_Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Account_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Financial_Account__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_JHA_LINK__c</fullName>
        <description>Combination of CIF and JHA Unique Id for upserting links</description>
        <externalId>true</externalId>
        <label>CIF JHA LINK</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <formula>IF(Account__r.CIF_SFDC2__c=&quot;&quot;,Account__r.CIF_Person__c,Account__r.CIF_SFDC2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <formula>Financial_Account__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account_ID__c</fullName>
        <formula>CASESAFEID( Financial_Account__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account_SFDC2__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Financial_Account_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <formula>Financial_Account__r.Funding_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <formula>Financial_Account__r.Funding_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <formula>Financial_Account__r.Maturity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <formula>Financial_Account__r.Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>Financial_Account__r.Ownership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Financial_Account__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <formula>Financial_Account__r.Promo_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship of individual or business to financial account</description>
        <label>Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Financial_Account__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Balance__c</fullName>
        <formula>TEXT(Current_Balance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>String Balance</label>
        <type>Text</type>
    </fields>
    <label>Financial Account Link</label>
    <nameField>
        <displayFormat>FAL-{YYYYMMDD}-{0000}</displayFormat>
        <label>Financial Account Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>